--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=SmartSpend
+application.vendor=saniy
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,13 +33,18 @@ dist.jar=${dist.dir}/SmartSpend.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SmartSpend
+endorsed.classpath=
 excludes=
-file.reference.jcalendar-1.4.jar=C:\\Users\\saniy\\Downloads\\jcalendar-1.4.jar\\jcalendar-1.4.jar
-file.reference.mysql-connector-j-9.0.0.jar=C:\\Users\\saniy\\Downloads\\mysql-connector-j-9.0.0\\mysql-connector-j-9.0.0.jar
+file.reference.jcalendar-1.4.jar=lib/jcalendar-1.4.jar
+file.reference.jcommon-1.0.23.jar=lib/jcommon-1.0.23.jar
+file.reference.jfreechart-1.5.3.jar=lib/jfreechart-1.5.3.jar
+file.reference.mysql-connector-j-9.0.0.jar=lib/mysql-connector-j-9.0.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jfreechart-1.5.3.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
     ${file.reference.mysql-connector-j-9.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -75,7 +81,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=SmartSpend
-main.class=gui.SmartSpend
+main.class=loginandsignup.MainPage
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
